@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.revision3"
        name="Revision3"
-       version="2.0.3" 
+       version="2.0.4" 
        provider-name="stacked">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
-	<import addon="script.module.parsedom" version="0.9.2"/>
-	<import addon="script.module.simple.downloader" version="0.9.2"/>
+	<import addon="script.module.parsedom" version="1.0.0"/>
+	<import addon="script.module.simple.downloader" version="0.9.3"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
