@@ -1,3 +1,7 @@
+[B]Version 2.0.4[/B]
+
+- Updated addon to support recent website changes.
+
 [B]Version 2.0.3[/B]
 
 - Fixed error when trying to play new shows
